Native button text should not move in active state. b=381639 r=cbarrett sr=roc